fix: Correct server startup script and add request logging
Fixed the npm script 'server' to run 'node index.js' instead of 'node server.js'. Added middleware to server/index.js to log incoming requests for better debugging.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "vite",
-    "server": "cd server && node server.js",
+    "server": "cd server && node index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
