--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@sparticuz/chromium": "^143.0.4",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.3"
+    "googleapis": "^170.0.0",
+    "mongoose": "^9.1.3",
+    "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.35.0",
+    "puppeteer-core": "^24.35.0"
   }
 }
