fix: set NODE_ENV=production in Dockerfile and add debugging
- Explicitly set NODE_ENV=production in Dockerfile to ensure puppeteer-core and @sparticuz/chromium are used in Cloud Run environment.
- Added environment logging in server/index.js for verification.
- This fixes the 'spawn ... ENOENT' error where the app was falling back to development puppeteer logic and looking for a missing local Chrome binary.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,14 +4,15 @@ WORKDIR /app
 
 COPY package*.json ./
 
+# Install production dependencies
 RUN npm install --production
 
 COPY . .
 
-# Cloud Run expects the container to listen on port 8080 by default, 
-# or the port specified by the PORT env var.
-# We'll use the environment variable which usually defaults to 8080 on Cloud Run.
+# Set environment variables
+ENV NODE_ENV=production
 ENV PORT=8080
+
 EXPOSE 8080
 
 CMD ["node", "index.js"]
