--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,19 @@
-FROM node:18-alpine
+FROM node:18-slim
+
+# Install dependencies for Chromium (required for @sparticuz/chromium on Debian)
+RUN apt-get update && apt-get install -y \
+    libnss3 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libxkbcommon0 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
+    libgbm1 \
+    libasound2 \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
