--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
+    "@types/papaparse": "^5.5.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.3"
+    "file-saver": "^2.0.5",
+    "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.3",
+    "papaparse": "^5.5.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^9.2.1",
